--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,23 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f1eade;
+  --foreground: #432818;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: #6f1d1b;
+  --color-primary-hover: #ab2c29;
+  --color-secondary: #99582a;
+  --color-accent: #bb9457;
+  --color-accent-hover: #9c7940;
+  --color-surface: #ffe6a7;
+  --color-muted: #7a4621;
+  --color-border: #c9aa7a;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 body {
